--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "lint": "npx eslint"
+    "lint": "npx eslint app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "https://github.com/Guzzlerx",
   "license": "ISC",
   "description": "",
   "dependencies": {
