fix models directory according to eslint rules

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "lint": "npx eslint app.js"
+    "lint": "npx eslint ."
   },
   "keywords": [],
   "author": "https://github.com/Guzzlerx",
