--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,22 @@
+// {
+//   "extends": ["airbnb-base"],
+//   "rules": {
+//     "comma-dangle": "off",
+//     "no-underscore-dangle": ["error", { "allow": ["_id"] }],
+//     "object-curly-newline": "off"
+//   }
+// }
 {
-  "extends": ["airbnb-base"],
+  "extends": ["airbnb-base", "prettier", "plugin:node/recommended"],
+  "plugins": ["prettier"],
   "rules": {
-    "comma-dangle": "off",
+    "prettier/prettier": "error",
+    "no-unused-vars": "warn",
+    "no-console": "off",
+    "func-names": "off",
+    "no-process-exit": "off",
+    "object-shorthand": "off",
+    "class-methods-use-this": "off",
     "no-underscore-dangle": ["error", { "allow": ["_id"] }]
   }
 }
